tests/statics/statics.exp
Error: class_statics.js:6
  6: C.g = function(x:string) { C.f(x); };
       ^ property `g`. Property not found in
  6: C.g = function(x:string) { C.f(x); };
     ^ statics of `C`

Error: class_statics.js:6
  6: C.g = function(x:string) { C.f(x); };
                                    ^ string. This type is incompatible with the expected param type of
  2:   static f(x:number) { }
                  ^^^^^^ number

Error: class_statics.js:7
  7: C.g(0);
         ^ number. This type is incompatible with the expected param type of
  6: C.g = function(x:string) { C.f(x); };
                      ^^^^^^ string

Error: class_statics.js:9
  9: var x:number = C.x;
                    ^^^ Cannot assign `C.x` to `x` because string [1] is incompatible with number [2].
  References:
    3:   static x:string;
                  ^^^^^^ [1]: string
    9: var x:number = C.x;
             ^^^^^^ [2]: number

Error: class_statics.js:10
 10: C.x = 0;
           ^ number [1] is incompatible with string [2].
  References:
   10: C.x = 0;
             ^ [1]: number
   10: C.x = 0;
       ^^^ [2]: string

Error: funstatics.js:5
  5: var x:string = new C().f();
                    ^^^^^^^^^^^ Cannot assign `new C().f()` to `x` because number [1] is incompatible with string [2].
  References:
    2: C.prototype.f = function() { return C.g(0); }
                                               ^ [1]: number
    5: var x:string = new C().f();
             ^^^^^^ [2]: string


Found 6 errors
